--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
 .ipynb_checkpoints/
 # OS
 .DS_Store
-# pycharm files
-.idea/
 # This is created by the code - ignoring it
 tmp/
 nb_errors.txt
-old-mistakes-homeworks/
+*/__pycache__/*
 ipynb_files_built.txt
