--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,38 @@
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*/__pycache__/*
+*.py[cod]
+*$py.class
+
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Jupyter Notebook
+.ipynb_checkpoints
 .ipynb_checkpoints/
-.nbgrader.log
+.ipynb_files_built.txt
+
 # OS
 .DS_Store
+# pycharm files
+.idea/
+
+# IPython
+profile_default/
+ipython_config.py
+
+# pyenv
+.python-version
+
+
 # This is created by the code - ignoring it
 tmp/
 nb_errors.txt
-*/__pycache__/*
-ipynb_files_built.txt
+.nbgrader.log
+
+
+
+
+
